增加同步时区按钮--测试有效

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 <input type="password" id="password" required>
                 <button type="submit">配置 Wi-Fi</button>
                 <button type="button" id="sync-time-button">同步时间</button>
+                <button id="sync-timezone-button">同步时区</button>
             </form>
             <div id="wifi-status"></div>
             <div id="status"></div>
