优化提示文字

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div id="local-time"></div>
         
         <div id="bluetooth-section">
-            <h2>Bluetooth Connection</h2>
+            <h2>Bluetooth Connection First</h2>
             <button id="scan-button">Scan Bluetooth Devices</button>
             <button id="reset-button">Reset</button>
             <ul id="device-list"></ul>
