--- a/index.html
+++ b/index.html
@@ -173,12 +173,21 @@
         <div id="log-window">
             <pre id="log-content">
         <span class="log-line">Welcome to EleksTube IPS Clock Control!</span>
-        
+
+        <span class="log-line">Compatible Devices:</span>
+        <span class="log-line">- EleksMaker EleksTube IPS</span>
+        <span class="log-line">- EleksMaker EleksTube IPS PRO</span>
+        <span class="log-line">- EleksMaker EleksTube IPS PR1/2</span>
+        <span class="log-line">Note: Not compatible with EleksTube R model</span>
+
+        <span class="log-line">Important: This tool only works on desktop browsers that support Web Bluetooth API (e.g., Chrome, Edge).</span>
+        <span class="log-line">Mobile browsers, including iOS devices, do not support Web Bluetooth API and cannot use this tool.</span>
+
         <span class="log-line">Instructions:</span>
         <span class="log-line">1. Click "Scan Bluetooth Devices" to search for your EleksTube IPS Clock.</span>
         <span class="log-line">2. Select your device from the list that appears.</span>
         <span class="log-line">3. Once connected, you can configure Wi-Fi, sync time, and adjust other settings.</span>
-        
+
         <span class="log-line">Logs will appear here once you start interacting with the device.</span>
             </pre>
         </div>
