--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
         <span class="log-line">Welcome to EleksTube IPS Clock Control!</span>
 
         <span class="log-line">Compatible Devices:</span>
-        <span class="log-line">- EleksMaker EleksTube IPS</span>
-        <span class="log-line">- EleksMaker EleksTube IPS PRO</span>
-        <span class="log-line">- EleksMaker EleksTube IPS PR1/2</span>
+        <span class="log-line">- EleksMaker EleksTube IPS Gen2</span>
+        <span class="log-line">- EleksMaker EleksTube IPS PRO Gen2</span>
+        <span class="log-line">- EleksMaker EleksTube IPS PR1/2 Gen2</span>
         <span class="log-line">Note: Not compatible with EleksTube R model</span>
 
         <span class="log-line">Important: This tool only works on desktop browsers that support Web Bluetooth API (e.g., Chrome, Edge).</span>
