Add sitemap and meta description.
Add sitemap and meta description.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EleksMaker EleksTube IPS Clock Control</title>
+    <title>EleksTube IPS Clock Web Configuration Tool</title>
+    <meta name="description" content="Official web tool for configuring Wi-Fi and syncing time on EleksMaker EleksTube IPS Clock devices. Easy to use interface for clock setup.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <style>
         body {
@@ -148,6 +149,17 @@
             color: #666;
         }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "EleksTube IPS Clock Web Configuration Tool",
+      "description": "Official web tool for configuring Wi-Fi and syncing time on EleksMaker EleksTube IPS Clock devices.",
+      "url": "https://elekstube.app",
+      "applicationCategory": "UtilityApplication",
+      "operatingSystem": "Any"
+    }
+    </script>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
