--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             color: #666;
             font-style: italic;
         }
+
     </style>
     <script type="application/ld+json">
     {
@@ -211,7 +212,8 @@
             <pre id="log-content">
         <span class="log-line">Welcome to EleksTube IPS Clock Control!</span>
 
-        <span class="log-line">Compatible Devices:</span>
+        <span class="log-line">*This web tool allows users without Windows to configure Wi-Fi and synchronize time for their EleksTube IPS Clock using a web browser with Bluetooth support.*</span>
+
         <span class="log-line">- EleksMaker EleksTube IPS Gen2</span>
         <span class="log-line">- EleksMaker EleksTube IPS PRO Gen2</span>
         <span class="log-line">- EleksMaker EleksTube IPS PR1/2 Gen2</span>
