--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <pre id="log-content">
         <span class="log-line">Welcome to EleksTube IPS Clock Control!</span>
 
-        <span class="log-line">*This web tool allows users without Windows to configure Wi-Fi and synchronize time for their EleksTube IPS Clock using a web browser with Bluetooth support.*</span>
+        <span class="log-line">*This web tool allows users without Windows to configure Wi-Fi and synchronize time for their EleksTube IPS Clock using a web browser with Bluetooth support.</span>
 
         <span class="log-line">- EleksMaker EleksTube IPS Gen2</span>
         <span class="log-line">- EleksMaker EleksTube IPS PRO Gen2</span>
